# numpy_ecs

./: LICENSE  README.md  pyproject.toml
numpy_ecs/: __init__.py  ecs.py  example.py
tests/: test_numpy_ecs.py
